[package]
name = "ml"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "*"
candle-core = "0.6.0"
candle-nn = "0.6.0"
forust-ml = "0.4.8"
zk-engine = "0.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
